# TaskVault-AI-MCP

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
src/: configs.py  constants.py
src/taskvault_ai_mcp/: __init__.py
src/taskvault_ai_mcp/mcp_client/: llm_chat_bot.py
src/taskvault_ai_mcp/mcp_server/: task_storage_service.py
tests/: test_task_storage_mcp_server.py
tests/mcp_server/: test_task_storage_mcp_server.py
