[project]
name = "taskvault-ai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gautam Kadiresh", email = "gautamkadiresh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.25",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "typing>=3.10.0.0",
]

[project.scripts]
taskvault-ai-mcp = "taskvault_ai_mcp:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 120
target-version = ['py312']
force-exclude = '''
/(
  uv.lock
  | pyproject.toml
  | LICENSE
  | README.md
  | .*ipynb
  | .gitignore
  | .*/__pycache__/.*
)
'''


